--- a/Demoqa_automation/locators/demohome.yaml
+++ b/Demoqa_automation/locators/demohome.yaml
@@ -2,3 +2,5 @@ demo_header:
   xpath: "//div[@id='app']//a[contains(@href, 'selenium-training')]/img"
 demo_all_elements:
   xpath: "//div[contains(@class, 'home-body')]//div[contains(@class, 'cards')]//div[contains(@class, 'card-body')]/h5"
+elements_icon:
+  xpath: "//div[@class='card-body']//h5[contains(text(), 'Elements')]"
