--- a/Demoqa_automation/locators/elements.yaml
+++ b/Demoqa_automation/locators/elements.yaml
@@ -4,6 +4,8 @@ elements_groups:
     xpath: "//ul[@class='menu-list']/li/span[contains(text(), 'Text Box')]"
   web_tables:
     xpath: "//ul[@class='menu-list']/li/span[contains(text(), 'Web Tables')]"
+  buttons_section:
+    xpath: "//ul[@class='menu-list']/li/span[contains(text(), 'Buttons')]"
   add_button:
     xpath: "//h1[text()='Web Tables']//following::button[contains(@id, 'addNewRecordButton')]"
   registration_form:
