practice on diff files

--- a/Demoqa_automation/locators/widgets.yaml
+++ b/Demoqa_automation/locators/widgets.yaml
@@ -6,3 +6,7 @@ progress_bar:
   xpath: "//div[contains(text(), 'Progress Bar')]//..//div[@id='progressBar']"
 start_button:
   xpath: "//h1[text()='Progress Bar']//following::button[text()='Start']"
+
+
+# widgets: 
+#   xpath: "//div[@class='header-wrapper']//following::*[text()='Widgets']"
