--- a/Demoqa_automation/locators/demohome.yaml
+++ b/Demoqa_automation/locators/demohome.yaml
@@ -6,3 +6,7 @@ elements_icon:
   xpath: "//div[@class='card-body']//h5[contains(text(), 'Elements')]"
 widgets: 
   xpath: "//div[@class='header-wrapper']//following::*[text()='Widgets']"
+
+
+# widgets: 
+#   xpath: "//div[@class='header-wrapper']//following::*[text()='Widgets']"
