--- a/Demoqa_automation/locators/elements.yaml
+++ b/Demoqa_automation/locators/elements.yaml
@@ -67,4 +67,7 @@ buttons_section:
     xpath: "//h1[text()='Buttons']//following::p[contains(@id, 'rightClickMessage')]"
   click_me_msg:
     xpath: "//h1[text()='Buttons']//following::p[contains(@id, 'dynamicClickMessage')]"
-    
+
+
+# widgets: 
+#   xpath: "//div[@class='header-wrapper']//following::*[text()='Widgets']"
